Added figure for comparing SimpleBox output with measurement data

--- a/vignettes/CaseStudies/MOMENTUM2/Figures.Rmd
+++ b/vignettes/CaseStudies/MOMENTUM2/Figures.Rmd
@@ -24,7 +24,7 @@ Load and prepare SimpleBox outcome data
 ```{R load SimpleBox data}
 ## Define paths 
 data_path <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/" # Define path to plot data
-figurefolder <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/Figures/D3.5_final_plots/" # Define figure folder path
+figurefolder <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Figures/" # Define figure folder path
 abs_path_Measurements <- "/rivm/r/E121554 LEON-T/03 - uitvoering WP3/Deliverable 3.5/LEONT_TNO_measurements_clean.xlsx" # Define path to LEON-T measurement data
 
 ## Load functions
@@ -69,82 +69,82 @@ Otherruns <- Otherruns$n
 source("baseScripts/initWorld_onlyPlastics.R")
 Matrix <- World$fetchData("Matrix")
 
-# Calculate concentrations for masses summed over polymers
-mass_conc_summed_over_pol <- 
-  Solution_long_summed_over_pol |>
-  left_join(World$fetchData("Volume"), 
-            by=c("Scale", "SubCompart")) |>
-  # Change 'cloudwater' to 'air', and then sum the masses and volumes of these compartments together
-  mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
-  ungroup() |> 
-  group_by(RUN, Source, Year, Scale, SubCompart) |>
-  summarise(Mass = sum(Mass),
-            Volume = sum(Volume)) |>
-  ungroup() |>
-  # Calculate the concentrations
-  mutate(conc_kg_m3 = Mass/Volume) |> 
-  left_join(World$fetchData("FRACw"),
-            by=c("Scale", "SubCompart")) |> 
-  left_join(World$fetchData("FRACa"),
-            by=c("Scale", "SubCompart")) |> 
-  left_join(World$fetchData("rhoMatrix"),
-            by=c("SubCompart")) |> 
-  left_join(World$fetchData("Matrix"),
-            by=c("SubCompart"))|> 
-  mutate(Unit = "kg/m3") |> 
-  mutate(Concentration =
-           case_match(Matrix,
-                      "air" ~ conc_kg_m3*1000000,
-                      "water" ~ conc_kg_m3*1000,
-                      "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-                      "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
-                      .default = conc_kg_m3),
-         Unit =
-           case_match(Matrix,
-                      "air" ~ "mg/m3",
-                      "water" ~ "mg/L",
-                      "soil" ~ "g/kg dw",
-                      "sediment" ~ "g/kg dw",
-                      .default = Unit)) |>
-  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
-  select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
+# # Calculate concentrations for masses summed over polymers
+# mass_conc_summed_over_pol <- 
+#   Solution_long_summed_over_pol |>
+#   left_join(World$fetchData("Volume"), 
+#             by=c("Scale", "SubCompart")) |>
+#   # Change 'cloudwater' to 'air', and then sum the masses and volumes of these compartments together
+#   mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
+#   ungroup() |> 
+#   group_by(RUN, Source, Year, Scale, SubCompart) |>
+#   summarise(Mass = sum(Mass),
+#             Volume = sum(Volume)) |>
+#   ungroup() |>
+#   # Calculate the concentrations
+#   mutate(conc_kg_m3 = Mass/Volume) |> 
+#   left_join(World$fetchData("FRACw"),
+#             by=c("Scale", "SubCompart")) |> 
+#   left_join(World$fetchData("FRACa"),
+#             by=c("Scale", "SubCompart")) |> 
+#   left_join(World$fetchData("rhoMatrix"),
+#             by=c("SubCompart")) |> 
+#   left_join(World$fetchData("Matrix"),
+#             by=c("SubCompart"))|> 
+#   mutate(Unit = "kg/m3") |> 
+#   mutate(Concentration =
+#            case_match(Matrix,
+#                       "air" ~ conc_kg_m3*1000000,
+#                       "water" ~ conc_kg_m3*1000,
+#                       "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
+#                       "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
+#                       .default = conc_kg_m3),
+#          Unit =
+#            case_match(Matrix,
+#                       "air" ~ "mg/m3",
+#                       "water" ~ "mg/L",
+#                       "soil" ~ "g/kg dw",
+#                       "sediment" ~ "g/kg dw",
+#                       .default = Unit)) |>
+#   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+#   select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
 
-# Calculate concentrations for NR SBR dataframe
-mass_conc_NR_SBR <- NR_SBR_data |>
-  mutate(Source = "Tyre wear") |>
-  mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
-  ungroup() |> 
-  group_by(RUN, Source, Year, Scale, SubCompart, Polymer) |>
-  summarise(Mass = sum(Mass)) |>
-  ungroup() |>
-  left_join(World$fetchData("Volume"), 
-            by=c("Scale", "SubCompart")) |>
-  mutate(conc_kg_m3 = Mass/Volume) |> 
-  left_join(World$fetchData("FRACw"),
-            by=c("Scale", "SubCompart")) |> 
-  left_join(World$fetchData("FRACa"),
-            by=c("Scale", "SubCompart")) |> 
-  left_join(World$fetchData("rhoMatrix"),
-            by=c("SubCompart")) |> 
-  left_join(World$fetchData("Matrix"),
-            by=c("SubCompart"))|> 
-  mutate(Unit = "kg/m3") |> 
-  mutate(Concentration =
-           case_match(Matrix,
-                      "air" ~ conc_kg_m3*1000000,
-                      "water" ~ conc_kg_m3*1000,
-                      "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-                      "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
-                      .default = conc_kg_m3),
-         Unit =
-           case_match(Matrix,
-                      "air" ~ "mg/m3",
-                      "water" ~ "mg/L",
-                      "soil" ~ "g/kg dw",
-                      "sediment" ~ "g/kg dw",
-                      .default = Unit))  |>
-  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
-  select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
+# # Calculate concentrations for NR SBR dataframe
+# mass_conc_NR_SBR <- NR_SBR_data |>
+#   mutate(Source = "Tyre wear") |>
+#   mutate(SubCompart = ifelse(SubCompart == "cloudwater", "air", SubCompart)) |>
+#   ungroup() |> 
+#   group_by(RUN, Source, Year, Scale, SubCompart, Polymer) |>
+#   summarise(Mass = sum(Mass)) |>
+#   ungroup() |>
+#   left_join(World$fetchData("Volume"), 
+#             by=c("Scale", "SubCompart")) |>
+#   mutate(conc_kg_m3 = Mass/Volume) |> 
+#   left_join(World$fetchData("FRACw"),
+#             by=c("Scale", "SubCompart")) |> 
+#   left_join(World$fetchData("FRACa"),
+#             by=c("Scale", "SubCompart")) |> 
+#   left_join(World$fetchData("rhoMatrix"),
+#             by=c("SubCompart")) |> 
+#   left_join(World$fetchData("Matrix"),
+#             by=c("SubCompart"))|> 
+#   mutate(Unit = "kg/m3") |> 
+#   mutate(Concentration =
+#            case_match(Matrix,
+#                       "air" ~ conc_kg_m3*1000000,
+#                       "water" ~ conc_kg_m3*1000,
+#                       "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
+#                       "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
+#                       .default = conc_kg_m3),
+#          Unit =
+#            case_match(Matrix,
+#                       "air" ~ "mg/m3",
+#                       "water" ~ "mg/L",
+#                       "soil" ~ "g/kg dw",
+#                       "sediment" ~ "g/kg dw",
+#                       .default = Unit))  |>
+#   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+#   select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
 
 # Calculate concentrations for continental polymer data
 mass_conc_continental_polymer <- continental_polymer_data |>
@@ -165,20 +165,21 @@ mass_conc_continental_polymer <- continental_polymer_data |>
   left_join(World$fetchData("Matrix"),
             by=c("SubCompart"))|>
   mutate(Unit = "kg/m3") |>
+  mutate(Concentration = conc_kg_m3) |>
   mutate(Concentration =
            case_match(Matrix,
-                      "air" ~ conc_kg_m3*1000000,
-                      "water" ~ conc_kg_m3*1000,
-                      "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000, # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
-                      "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix)*1000,
+  #                     "air" ~ conc_kg_m3*1000000,
+  #                     "water" ~ conc_kg_m3*1000,
+                      "soil" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix), # RhoWater needed (we need to define subcompartment variables for rhoWater, rhoSolid and rhoAir)
+                       "sediment" ~ conc_kg_m3  / ((1 - FRACw - FRACa) * rhoMatrix),
                       .default = conc_kg_m3),
-         Unit =
-           case_match(Matrix,
-                      "air" ~ "mg/m3",
-                      "water" ~ "mg/L",
-                      "soil" ~ "g/kg dw",
-                      "sediment" ~ "g/kg dw",
-                      .default = Unit))  |>
+          Unit =
+            case_match(Matrix,
+  #                     "air" ~ "mg/m3",
+  #                     "water" ~ "mg/L",
+                       "soil" ~ "kg/kg dw",
+                       "sediment" ~ "kg/kg dw",
+                       .default = Unit))  |>
   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
   select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
 
@@ -218,20 +219,19 @@ mass_conc_SB_data_TW <- SB_data_TW |>
   mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
   select(-c(conc_kg_m3, FRACw, FRACa, rhoMatrix, Matrix, Volume))
 
-##### 
-## Select only the complete runs for all concentration dataframes 
-mass_conc_summed_over_pol <- mass_conc_summed_over_pol |>
-  inner_join(yearcount, by = c("RUN", "Source"))
-
-mass_conc_NR_SBR <- mass_conc_NR_SBR |>
-  inner_join(yearcount, by = c("RUN", "Source"))
+# ##### 
+# ## Select only the complete runs for all concentration dataframes 
+# mass_conc_summed_over_pol <- mass_conc_summed_over_pol |>
+#   inner_join(yearcount, by = c("RUN", "Source"))
+# 
+# mass_conc_NR_SBR <- mass_conc_NR_SBR |>
+#   inner_join(yearcount, by = c("RUN", "Source"))
 
 mass_conc_continental_polymer <- mass_conc_continental_polymer |>
   inner_join(yearcount, by = c("RUN", "Source"))
 
 mass_conc_SB_data_TW <- mass_conc_SB_data_TW |>
   inner_join(yearcount, by = c("RUN", "Source"))
-
 ```
 
 ```{R set plot parameters}
@@ -239,7 +239,7 @@ mass_conc_SB_data_TW <- mass_conc_SB_data_TW |>
 plot_theme <-  theme(
   axis.title.x = element_text(size = 30),    
   axis.title.y = element_text(size = 30),    
-  axis.text.x = element_text(size = 28, angle = 45, hjust = 1),     
+  axis.text.x = element_text(size = 28, angle = 65, hjust = 1),     
   axis.text.y = element_text(size = 28),
   legend.text = element_text(size = 28),
   title = element_text(size=30),
@@ -257,9 +257,125 @@ NR_SBR_colors <- c("NR" = "#20A387FF",
 year <- 2019
 ```
 
+Convert mass to particles for comparison to measurements. 
+
+Also filter out any RUN/Polymer combinations that have a RadS outside the detection limits of the measurements.
+
+```{R convert mass to particles concentration}
+measurements <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MOMENTUM2_measurements.xlsx", sheet = "Particle Data")
+
+lower_limit <- min(na.omit(measurements$lower_detection_limit_um)) * 1000
+upper_limit <- max(measurements$upper_detection_limit_um) * 1000
+
+# Get run numbers between the lower and upper limit
+limit_runs <- Material_Parameters_long |>
+  filter(VarName == "RadS" | VarName == "RhoS") |>
+  select(VarName, Polymer, RUN, value) |>
+  pivot_wider(names_from = "VarName", values_from = "value") |>
+  filter(RadS >= lower_limit) |>
+  filter(RadS <= upper_limit) 
+
+rad_rho <- limit_runs |>
+  rename(rad_nm = RadS) |>
+  rename(rho_kg_m3 = RhoS) |>
+  mutate(rad_m = rad_nm*10^-9) |>
+  mutate(volume_m3 = (4/3)*pi*rad_m^3) |>
+  mutate(mass_per_particle_kg = volume_m3*rho_kg_m3)
+
+particles_conc_continental_polymer <- mass_conc_continental_polymer |>
+  filter(Year == year) |>
+  left_join(rad_rho, by = c("RUN", "Polymer")) |>
+  filter(!is.na(rad_nm)) |>
+  mutate(Concentration = Concentration/mass_per_particle_kg) |>
+  mutate(Unit = case_when(
+    Unit == "kg/kg dw" ~ "#/kg dw",
+    Unit == "kg/m3" ~ "#/m3")) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(RUN, Source, Year, Scale, SubCompart, Polymer, Concentration, Unit, SubCompartName) |>
+  mutate(source = "SimpleBox") |>
+  group_by(RUN, SubCompart, SubCompartName, source, Year, Unit, Scale) |>
+  summarise(Concentration = sum(Concentration)) |>
+  ungroup()
+
+```
+
+```{R Make figure comparing SB outcomes to measurements for all polymers}
+# Get measured concentrations
+measurements_formatted <- measurements |> 
+  mutate(source = "Measurement") |>
+  rename(Concentration = concentration,
+         Unit = concentration_unit) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")")) |>
+  select(Concentration, SubCompartName, source) 
+
+particle_plot_data <- bind_rows(particles_conc_continental_polymer, measurements_formatted)
+Figure <- ggplot(particle_plot_data, aes(x = SubCompartName, y = Concentration, col=source)) +  
+  geom_violin(data = particle_plot_data %>% filter(source == "SimpleBox"), 
+              aes(fill = source), alpha = 0.5) + 
+  geom_jitter(data = particle_plot_data %>% filter(source == "Measurement"), 
+              aes(col = source), 
+              position = position_jitter(width = 0.2), alpha = 1, size = 3) +
+  scale_fill_manual(values = c("SimpleBox" = "#00c0AF", "Measurement" = "#F8766D")) +
+  scale_color_manual(values = c("Measurement" = "#F8766D")) +
+  labs(
+    title = paste0("Microplastic concentrations at continental scale, ", as.character(year)),
+    subtitle = paste0("Modeled concentrations filtered for detection limit of measurements"),
+    x = "",
+    y = "Concentration"
+  ) +
+  plot_theme +  
+  scale_y_log10(
+    breaks = scales::trans_breaks("log10", function(x) 10^x, n = 10),
+    labels = scales::trans_format("log10", scales::math_format(10^.x))) +
+  annotation_logticks(
+    sides = "l",  
+    short = unit(0.07, "cm"),
+    mid = unit(0.07, "cm"),
+    long = unit(0.1, "cm"),
+    size = 0.25) +
+  theme(legend.position = "bottom") +
+  guides(fill = guide_legend(title = NULL), color = guide_legend(title = NULL))  # Remove legend titles
+
+Figure
+
+ggsave(paste0(figurefolder, "All_polymers.png"), plot = Figure, width = 20, height = 23, dpi = 1000)
+```
+
+```{R}
+
+
+
+
+```
+
 Compare modeled TW concentrations with measured concentrations. 
 
 ```{R Figure comparing TW concentrations with measurements}
+
+LEONT_TWP_data <- prep_LEONT_data(abs_path_Measurements) 
+
+subcomparts <- unique(LEONT_TWP_data$SubCompart)
+
+# Prepare SimpleBox data for plotting
+mass_conc_SB_data_TW2 <- mass_conc_SB_data_TW |>
+  mutate(Concentration = case_when(
+    SubCompart == "air" ~ Concentration*1000,
+    SubCompart == "river" ~ Concentration*1000,
+    TRUE ~ Concentration
+  )) |>
+  mutate(Unit = case_when(
+    SubCompart == "air" ~ "µg/m^3",
+    SubCompart == "river" ~ "µg/L",
+    Unit == "g/kg dw" ~ "mg/g dw",
+    TRUE ~ Unit
+  )) |>
+  mutate(SubCompartName = paste0(SubCompart, " (", Unit, ")" )) |>
+  mutate(Polymer = "SBR + NR") |>
+  mutate(source = "SimpleBox") |>
+  filter(SubCompart %in% subcomparts) |>
+  mutate(Locatie = "SimpleBox") |>
+  select(colnames(LEONT_TWP_data)) 
+
 # Make plot comparing LEONT and SB data
 LEONT_SB_SBR_NR <- bind_rows(LEONT_TWP_data, mass_conc_SB_data_TW2) |>
   filter(Polymer == "SBR + NR") 
@@ -292,5 +408,5 @@ Figure_21 <- ggplot(LEONT_SB_SBR_NR, aes(x = SubCompartName, y = Concentration, 
 
 Figure_21
 
-ggsave(paste0(figurefolder, "Figure_21.png"), plot = Figure_21, width = 20, height = 23, dpi = 1000)
+ggsave(paste0(figurefolder, "Tyre_wear.png"), plot = Figure_21, width = 20, height = 23, dpi = 1000)
 ```
