--- a/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
+++ b/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
@@ -7,6 +7,7 @@ editor_options:
 ```{R load packages}
 library(openxlsx)
 library(tidyverse)
+library(readxl)
 ```
 
 # Leslie et al. (2017)
@@ -36,9 +37,8 @@ SB4P <- SB4P_raw |>
   mutate(max_diameter_um = as.double(map_chr(str_split(size.um, " - "), 2))) |>
   mutate(source = paste0(ref, " (", pub.year, ")")) |>
   rename(SubCompart = type,
-         location = country,
          value = mean) |>
-  select(SubCompart, Scale, min_diameter_um, max_diameter_um, value, unit, source, method, location) |>
+  select(SubCompart, Scale, min_diameter_um, max_diameter_um, value, unit, source, method, country) |>
   rename(sampling_method = method) |>
   #mutate(detection_method = "Light microscopy") |>
   mutate(detection_method = NA) |>
@@ -87,7 +87,7 @@ KWR_location_concentrations_data <- KWR_data_dfs |>
             value = mean(MP_m3)) |>
   mutate(SubCompart = "river") |>
   mutate(unit = "#/m3") |>
-  mutate(institute = "KWR")
+  mutate(institute = "KWR") 
 
 #### KWR effluent data
 KWR_effluent_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Measurements/KWR/Effluent/readme.xlsx", sheet = "Data")
@@ -133,7 +133,8 @@ KWR_data <- bind_rows(KWR_location_concentrations_data, KWR_location_concentrati
   mutate(lower_detection_limit_um = 10) |>
   mutate(upper_detection_limit_um = 5000) |>
   mutate(institute = "KWR") |>
-  mutate(Scale = "Regional")
+  mutate(Scale = "Regional") |> 
+  mutate(country = "Netherlands")
 ```
 
 # TNO LEON-T measurements tyre wear
@@ -153,21 +154,27 @@ LEONT_TWP_data <- prep_LEONT_data(abs_path_Measurements) |>
   mutate(lower_detection_limit_um = 2,
          upper_detection_limit_um = 1000,
          min_diameter_um = 2,
-         max_diameter_um = 1000)
+         max_diameter_um = 1000,
+         country = "Netherlands",
+         Scale = "Regional") 
 ```
 
 # Redondo-Hasselerharm et al., 2024
 
 Read in the data on soil microplastic concentrations (Redondo-Hasselerharm et al., 2024)
 
+NOTE: only mean concentrations are currently kept. 
+
 ```{R}
-soil_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2024_soil.xlsx")
+soil_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2024_soil.xlsx", sheet = "Measurements")
+references <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2024_soil.xlsx", sheet = "References")
 
 # Change "N.R." (not reported) to NA
 soil_concentrations[soil_concentrations == "N.R."] <- NA
 soil_concentrations$Mean_concentration <- gsub("[^0-9.]", "", soil_concentrations$Mean_concentration)
 soil_concentrations$Min_concentration <- gsub("[^0-9.]", "", soil_concentrations$Min_concentration)
 soil_concentrations$Max_concentration <- gsub("[^0-9.]", "", soil_concentrations$Max_concentration)
+soil_concentrations$REF <- gsub("[^0-9.]", "", soil_concentrations$REF)
 
 # Select background concentrations only
 soil_concentrations <- soil_concentrations |>
@@ -177,42 +184,148 @@ soil_concentrations <- soil_concentrations |>
   filter(str_detect(MP.source, "Background"))
 
 # Filter for concentrations in Europe 
-soil_concentrations<- soil_concentrations |>
+soil_concentrations <- soil_concentrations |>
   filter(str_detect(`Country,.Continent`, "Europe")) |>
-  select(Land.type, `Country,.Continent`, detection_method, lower_detection_limit_um, upper_detection_limit_um, Mean_concentration, unit) |>
+  select(Land.type, `Country,.Continent`, detection_method, lower_detection_limit_um, upper_detection_limit_um, Mean_concentration, unit, REF) |>
   mutate(SubCompart = case_when(
     Land.type == "Farmland" ~ "agriculturalsoil",
     Land.type == "Grassland" ~ "naturalsoil",
     Land.type == "Forest" ~ "naturalsoil"
   )) |>
   rename(value = Mean_concentration,
-         location = `Country,.Continent`) |>
+         country = `Country,.Continent`) |>
   select(-Land.type) |>
-  mutate(source = "Redondo-Hasselerharm et al., 2024") |>
+  mutate(REF= as.numeric(REF)) |>
+  left_join(references, by = "REF") |>
+  select(-REF) |>
   mutate(Scale = case_when(
-    str_detect(location, "Netherlands") ~ "Regional",
+    str_detect(country, "Netherlands") ~ "Regional",
     TRUE ~ "Continental"
   )) |>
-  mutate(min_diameter_um = NA,
-         max_diameter_um = NA,
-         sampling_method = NA)
+  mutate(unit = "#/kg dw") |>
+  mutate(country = str_remove(country, ", Europe"))
+```
+
+# Redondo-Hasselerharm et al., 2022
+
+Read in the data on freshwater sediment microplastic concentrations (Redondo-Hasselerharm et al., 2022)
+
+NOTE: only mean concentrations are currently kept. 
+
+```{R}
+sediment_concentrations <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2022_sediment.xlsx", sheet = "Measurements")
+references <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/Redondo_2022_sediment.xlsx", sheet = "References")
+
+# Change "N.R." (not reported) to NA
+sediment_concentrations[sediment_concentrations == "N.R."] <- NA
+sediment_concentrations$Mean_concentration <- gsub("[^0-9.]", "", sediment_concentrations$Mean_concentration)
+sediment_concentrations$Min_concentration <- gsub("[^0-9.]", "", sediment_concentrations$Min_concentration)
+sediment_concentrations$Max_concentration <- gsub("[^0-9.]", "", sediment_concentrations$Max_concentration)
+sediment_concentrations$REF <- gsub("[^0-9.]", "", sediment_concentrations$REF)
+
+# Select background concentrations only
+sediment_concentrations <- sediment_concentrations |>
+  mutate(Mean_concentration = as.integer(Mean_concentration),
+         Min_concentration = as.integer(Min_concentration),
+         Max_concentration = as.integer(Max_concentration)) 
+
+# Filter for concentrations in Europe 
+sediment_concentrations <- sediment_concentrations |>
+  filter(str_detect(`Country,.Continent`, "Europe")) |>
+  select(Ecosystem.type, `Country,.Continent`, lower_detection_limit_um, upper_detection_limit_um, Mean_concentration, Unit, REF) |>
+  mutate(SubCompart = case_when(
+    Ecosystem.type == "River" ~ "freshwatersediment",
+    Ecosystem.type == "Lake" ~ "lakesediment"
+  )) |>
+  rename(value = Mean_concentration,
+         country = `Country,.Continent`) |>
+  select(-Ecosystem.type) |>
+  filter(!is.na(SubCompart)) |>
+  filter(value != 0) |>
+  mutate(REF= as.numeric(REF)) |>
+  left_join(references, by = "REF") |>
+  select(-REF) |>
+  mutate(Scale = case_when(
+    str_detect(country, "Netherlands") ~ "Regional",
+    TRUE ~ "Continental"
+  )) |>
+  mutate(country = str_remove(country, ", Europe")) |>
+  filter(raw_data == "N") |>
+  select(-raw_data) |>
+  mutate(lower_detection_limit_um = as.numeric(lower_detection_limit_um),
+         upper_detection_limit_um = as.numeric(upper_detection_limit_um)) |>
+  rename(unit = Unit) |>
+  filter(country != "Russia")
 ```
 
 # MoreMomentum
-To do: MoreMomentum data
+Data from Mintenig et al. (2020)
 
 ```{R}
+Mintenig <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Mintenig_2020") |>
+  rename(value = concentration) |>
+  mutate(Scale = "Regional") |>
+  select(-polymer)
 
+Mintenig_particles <- Mintenig |>
+  filter(unit == "#/m3")
+
+Mintenig_mass <- Mintenig |>
+  filter(unit != "#/m3") |>
+  mutate(unit = "µg/m^3")
+```
+
+Data from Moses et al. (2023)
+
+```{R}
+Moses <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Moses_2023") 
+Moses[is.na(Moses)] <- 0
+
+Moses <- Moses |>
+  mutate(value = PP+PE+PS+PVC+Sil+PET+EVAc+PMMA+PC+ABS+PBT+PU+PA+`PLA-PBAT`)|>
+  mutate(Scale = "Continental") |>
+  select(value, unit, SubCompart, Scale, country, lower_detection_limit_um, upper_detection_limit_um, source)
+``` 
+
+Data from Liu et al. (2022)
+
+```{R}
+Liu <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Liu_2022") |>
+  rename(location = areatype) |>
+  select(location, Total, unit, SubCompart, country, lower_detection_limit_um, upper_detection_limit_um, source) |>
+  rename(value = Total) |>
+  mutate(Scale = "Continental")
+```
+
+Data from Mani et al. (2020)
+
+```{R}
+Mani <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Mani_2020") |>
+  rename(value = concentration) |>
+  mutate(Scale = "Continental")  |>
+  select(value, unit, SubCompart, Scale, country, lower_detection_limit_um, upper_detection_limit_um, location, source)
+```
+
+Data from Semmouri et al. (2023)
+
+```{R}
+Semmouri <- read.xlsx("/rivm/r/E121554 LEON-T/03 - uitvoering WP3/MOMENTUM2/MoreMomentum_data_clean.xlsx", sheet = "Semmouri_2023") |>
+  group_by(Waterway, location, Date.of.sampling, unit, SubCompart, country, lower_detection_limit_um, upper_detection_limit_um, source) |>
+  summarise(value = sum(concentration)) |>
+  ungroup() |>
+  mutate(Scale = "Continental")
 ```
 
 # Save
 Save the data. #/m3 and weight concentrations on different tabs.
 
 ```{R Save data}
-particle_data <- bind_rows(SB4P, KWR_data, soil_concentrations) |>
-  select(value, unit, SubCompart, SubCompart, location, min_diameter_um, max_diameter_um, mean_diameter_um, median_diameter_um, sampling_method, detection_method, lower_detection_limit_um, upper_detection_limit_um, source, institute) |>
+particle_data <- bind_rows(SB4P, KWR_data, soil_concentrations, Mintenig_particles, Moses, Liu, Mani, Semmouri, sediment_concentrations) |>
+  select(value, unit, SubCompart, Scale, location, min_diameter_um, max_diameter_um, mean_diameter_um, median_diameter_um, sampling_method, detection_method, lower_detection_limit_um, upper_detection_limit_um, source, institute, country) |>
   rename(concentration = value,
          concentration_unit = unit)
+
+mass_data <- bind_rows(LEONT_TWP_data, Mintenig_mass)
 
 # Create a new workbook
 wb <- createWorkbook()
